# groq-format

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: doc.rs  format.rs  lib.rs  main.rs
tests/: integration_tests.rs
